--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="row gutters-80">
             <div class="col-md-4">
               <div class="about__image">
-                  <img src="../../vaish3.jpg" alt="" width="420" height="550"/>
+                  <img src="assets/images/vaish3.jpg" alt="" width="420" height="550"/>
                 
               </div>
             </div>
